Kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-myapp
  template:
    metadata:
      labels:
        app: nodejs-myapp
    spec:
      containers:
        - name: app
          image: sivabalan30/nodejs-myapp-js:1.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
