Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nodejs-myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4300
